# Collect_Data_with_Python_and_Google_Forms

./: .gitignore  README.md  main.py  pyproject.toml
