[project]
name = "collect-data-with-python-and-google-forms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "credentials",
    "gspread>=6.2.1",
    "pandas>=3.0.0",
    "pydrive>=1.3.1",
]

[tool.uv.workspace]
members = [
    "credentials",
]

[tool.uv.sources]
credentials = { workspace = true }
